--- a/src/components/Autocomplete/Autocomplete.css
+++ b/src/components/Autocomplete/Autocomplete.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  margin: 0.5rem 0;
 }
 
 .autocomplete-input {
